# go-libtiles

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  go.work  go.work.sum
cmd/: go.mod  go.sum
cmd/convert/: main.go
cmd/export/: main.go
cmd/import/: main.go
cmd/internal/: formats.go
cmd/optimize/: main.go
cmd/tileutils/: convert.go  export.go  formats.go  go.mod  go.sum  import.go  main.go
index/: BUILD.bazel  index.go
internal/: testcases.go  testdata.go
internal/copier/: BUILD.bazel  copier.go
internal/testdata/: BUILD.bazel  testdata.go
mb/: BUILD.bazel  reader.go  writer.go
pm/: BUILD.bazel  common.go  header.go  io_test.go  pm_test.go  reader.go  writer.go
pm/internal/: test_utils.go
pm/spec/: BUILD.bazel  compression.go  compression_test.go  directory.go  directory_test.go  header.go  header_test.go  tileid.go  tileid_test.go
testdata/: BUILD.bazel  README.md
tile/: BUILD.bazel  iterators.go  tile.go
tileindex/: tileindex.go
tileutils/: go.mod
tileutils/mb_export_index/: main.go
tileutils/mb_to_pm/: main.go
tileutils/pm_export_index/: main.go
tileutils/pm_import_index/: main.go
tools/: go.mod
tools/mb_export_index/: main.go
tools/mb_to_pm/: main.go
tools/pm_export_index/: main.go
tools/pm_import_index/: main.go
wt/: BUILD.bazel  reader.go  writer.go  wt_test.go
wt/fbs/: BUILD.bazel  BlockType.go  DenseLocations.go  FileHeader.go  Header.go  HeaderSignature.go  HeaderSize.go  HeaderVersion.go  IndexFormat.go  IndexHeader.go  IndexMagic.go  LinkItem.go  Location.go  LocationItem.go  ResponseParams.go  SparseBlock.go  SparseLocations.go
wt/index/: BUILD.bazel  index.go
wt/index/block/: BUILD.bazel  levels.go  levels_test.go
wt/index/formats/basic/: BUILD.bazel  format.go
wt/index/formats/plain/: BUILD.bazel  format.go
wt/index/formats/sparse/: BUILD.bazel  bits.go  block.go  fbs.go  format.go
wt/index/internal/morton/: BUILD.bazel  tileid.go  tileid_test.go
wt/index/packed/: BUILD.bazel  location.go  location_test.go
wt/index/zoom/: levels.go  levels_test.go
xyz/: BUILD.bazel  io_test.go  pattern.go  reader.go  writer.go
