module(
    name = "go-libtiles",
    version = "0.6.0",
)

bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_go", version = "0.61.1")

bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)  # for testdata

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

# run `bazel run //:gazelle` and `bazel mod tidy` to update deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_flatbuffers",
    "com_github_google_go_cmp",
    "com_github_google_hilbert",
    "org_golang_x_sync",
)

bazel_dep(name = "webtiles")
archive_override(
    module_name = "webtiles",
    integrity = "sha256-TBYw1L0T9DzYPPIWeJqsXTzWSIgfxr9ca649dS3d1k4=",
    strip_prefix = "webtiles-spec-v0.3.0",
    urls = ["https://github.com/eak1mov/webtiles/archive/refs/tags/spec-v0.3.0.tar.gz"],
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "testdata_input",
    downloaded_file_path = "input.zip",
    integrity = "sha256-tm1PAOA3QjGIh1dGxkvRxQpBs3pFiXGzUAeImnXfjQ8=",
    urls = ["https://github.com/eak1mov/libtiles-testdata/archive/index-v0.2.0.zip"],
)
