load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "block",
    srcs = ["levels.go"],
    importpath = "github.com/eak1mov/go-libtiles/wt/index/block",
    visibility = ["//visibility:public"],
)

go_test(
    name = "block_test",
    srcs = ["levels_test.go"],
    deps = [
        ":block",
        "@com_github_google_go_cmp//cmp",
    ],
)
